--- a/saves.ipynb
+++ b/saves.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "학번을 입력하세요\n",
+      "201703138\n",
+      "Password: ········\n"
+     ]
+    }
+   ],
    "source": [
-    "#options = webdriver.ChromeOptions() \n",
-    "#options.add_argument('headless') \n",
-    "#options.add_argument('window-size=1920x1080') \n",
-    "#options.add_argument(\"disable-gpu\")\n",
     "list_coarse = [\"전체보기(View all)\", \"이중전공\", \"2전공\", \"부전공\", \"실용외국어\", \"교양\", \"교직\", \"자선\"]\n",
     "root = Tk()\n",
     "root.filename  =  filedialog.askopenfilenames(initialdir =\"C:/\",title = \"choose your webdriver file\")\n",
@@ -37,7 +43,7 @@
     "ssn= input()\n",
     "bd = getpass.getpass('Password: ')\n",
     "#driver = webdriver.Chrome(executable_path= root.filename, options=options)\n",
-    "driver = webdriver.Chrome(executable_path= root.filename)\n",
+    "driver = webdriver.Chrome(executable_path= ''.join(root.filename))\n",
     "#웹드라이버 경로\n",
     "driver.get(\"http://wis.hufs.ac.kr/src08/jsp/index.jsp\")\n",
     "driver.find_element_by_name('user_id').send_keys(str(ssn))\n",
@@ -61,8 +67,7 @@
     "    driver.find_element_by_xpath('/html/body/div/a[4]').click()\n",
     "    driver.find_element_by_xpath('//*[@id=\"div23\"]/a[2]').click()\n",
     "    driver.execute_script(\"return fnWisMLog('/src08/jsp/grade/GRADE1030L_Main.jsp?tab_lang=K|성적취득현황')\")\n",
-    "except NoSuchElementException as e: print(\"no such element is in this page\")\n",
-    "## 드랍다운 option select 값에 맞는 항목 선택하도록 만들어 주고, 그 값에 나온 성적을 추출하는 방식 사용##"
+    "except NoSuchElementException as e: print(\"no such element is in this page\")"
    ]
   },
   {
