--- a/saves.ipynb
+++ b/saves.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,34 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "학번을 입력하세요\n",
-      "201401770\n",
-      "Password: ········\n",
-      "신찬엽\n",
-      "디지털정보공학과\n",
-      "TESOL영어학 (TESOL & English Linguistics)\n",
-      "1전공\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-730d38b056aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtag\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'재'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlist_cal2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_cal2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0ms\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlist_cal2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mlist_cal\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m/\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_cal2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "root = Tk()\n",
     "root.filename  =  filedialog.askopenfilenames(initialdir =\"C:/\",title = \"choose your webdriver file\")\n",
@@ -106,7 +81,25 @@
     "\n",
     "print(user_major2) # user major2\n",
     "\n",
-    "lista = [\"1전공\", \"이중전공\", \"2전공\", \"실외\", \"교양\", \"부전공\", \"교직\", \"자선\", \"총취득\", \"총평점\"]\n",
+    "lista = [\"1전공 \", \"이중전공 \", \"2전공 \", \"실외 \", \"교양 \", \"부전공 \", \"교직 \", \"자선 \", \"총취득 \"]\n",
+    "time.sleep(3)\n",
+    "try:\n",
+    "    driver.switch_to.frame(driver.find_element_by_name('body'))\n",
+    "    driver.switch_to.frame(driver.find_element_by_name('top'))\n",
+    "    driver.find_element_by_xpath('/html/body/div/form/div[1]/table/tbody/tr[2]')\n",
+    "except NoSuchElementException as e: print(\"no such element is in this page\")\n",
+    "html = driver.page_source\n",
+    "bs = BeautifulSoup(html, 'html.parser')\n",
+    "tags = bs.findAll('td')\n",
+    "id2  = 0\n",
+    "count = 9\n",
+    "for tag in tags : \n",
+    "    if(id2 == 0): id2= id2+ 1\n",
+    "    elif(id2 <10): \n",
+    "        print( lista[id2 - 1],tag.text)\n",
+    "        id2= id2 + 1\n",
+    "    else: break\n",
+    "\n",
     "time.sleep(3)\n",
     "driver.switch_to.default_content()\n",
     "list_major = ['1전공', '이중전공', '2전공', '부전공', '실용외국어', '교양', '교직', '자선']\n",
@@ -147,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,21 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Unnamed: 0  전공  이중전공  부전공  교양  자선  졸업학점 합계\n",
-      "0       이중전공  54    42    0  32   6      134\n",
-      "1        부전공  54     0   21  32  27      134\n",
-      "2       전공심화  75     0    0  32  27      134\n",
-      "3   전공심화+부전공  75     0   21  32   6      134\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(test)"
    ]
@@ -200,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
