--- a/saves.ipynb
+++ b/saves.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,20 +20,49 @@
     "import requests\n",
     "import time\n",
     "from selenium.webdriver.support.ui import Select\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "학번을 입력하세요\n",
+      "201401770\n",
+      "Password: ········\n",
+      "no such element is in this page\n",
+      "1전공  48\n",
+      "이중전공  0\n",
+      "2전공  0\n",
+      "실외  4\n",
+      "교양  28\n",
+      "부전공  14\n",
+      "교직  0\n",
+      "자선  6\n",
+      "총취득  100\n",
+      "공과대학\n",
+      "디지털정보공학과\n",
+      "전공심화(부전공)\n",
+      "TESOL영어학 (TESOL & English Linguistics)\n",
+      "14\n"
+     ]
+    }
+   ],
    "source": [
     "root = Tk()\n",
     "root.filename  =  filedialog.askopenfilenames(initialdir =\"C:/\",title = \"choose your webdriver file\")\n",
     "root.withdraw()\n",
     "print(\"학번을 입력하세요\")\n",
     "ssn= input()\n",
+    "user_ssn = int(ssn[2:4])\n",
     "bd = getpass.getpass('Password: ')\n",
     "#driver = webdriver.Chrome(executable_path= root.filename, options=options)\n",
     "driver = webdriver.Chrome(executable_path= ''.join(root.filename))\n",
@@ -67,20 +96,30 @@
     "    \n",
     "driver.switch_to.default_content()\n",
     "driver.switch_to.frame('left')\n",
-    "user_name = driver.find_element_by_xpath('/html/body/div/table[1]/tbody/tr/td/div[2]/table/tbody/tr[2]/td')\n",
-    "print(user_name.text[2:]) # user name\n",
-    "user_major = driver.find_element_by_xpath('/html/body/div/table[1]/tbody/tr/td/div[2]/table/tbody/tr[3]/td/p')\n",
-    "print(user_major.text) # user major\n",
+    "name_source = driver.find_element_by_xpath('/html/body/div/table[1]/tbody/tr/td/div[2]/table/tbody/tr[2]/td')\n",
+    "user_name = name_source.text[2:] # user name\n",
+    "major_source = driver.find_element_by_xpath('/html/body/div/table[1]/tbody/tr/td/div[2]/table/tbody/tr[3]/td')\n",
+    "major_source2 = major_source.text[5:].split('\\n')\n",
+    "user_college = major_source2[0]\n",
+    "user_major = major_source2[1]\n",
+    "choose = 0\n",
     "\n",
     "driver.switch_to.default_content()\n",
     "driver.switch_to.frame(driver.find_element_by_name('body'))\n",
     "driver.switch_to.frame(driver.find_element_by_name('top'))\n",
     "user_majors = driver.find_element_by_xpath('/html/body/div/form/div[2]/table/tbody/tr/td')\n",
+    "if \"\\n\" in user_majors.text :\n",
+    "    choose = 1 # 이중.부전공 선택한 사람\n",
+    "else :\n",
+    "    choose = 0 # 이중.부전공 미선택자\n",
+    "if choose == 1 :\n",
+    "    user_sub_major = user_majors.text.split(']')[-1][1:]\n",
+    "    user_sub = (user_majors.text.split('[')[2]).split(']')[0]\n",
     "\n",
-    "user_major2 = user_majors.text.split(']')[-1][1:]\n",
-    "\n",
-    "print(user_major2) # user major2\n",
-    "\n",
+    "else :\n",
+    "    user_sub = None\n",
+    "    user_sub_major = None\n",
+    "    \n",
     "lista = [\"1전공 \", \"이중전공 \", \"2전공 \", \"실외 \", \"교양 \", \"부전공 \", \"교직 \", \"자선 \", \"총취득 \"]\n",
     "time.sleep(3)\n",
     "try:\n",
@@ -96,63 +135,118 @@
     "for tag in tags : \n",
     "    if(id2 == 0): id2= id2+ 1\n",
     "    elif(id2 <10): \n",
-    "        print( lista[id2 - 1],tag.text)\n",
+    "        print( lista[id2 - 1],tag.text) # 수강현황\n",
     "        id2= id2 + 1\n",
     "    else: break\n",
     "\n",
-    "time.sleep(3)\n",
-    "driver.switch_to.default_content()\n",
-    "list_major = ['1전공', '이중전공', '2전공', '부전공', '실용외국어', '교양', '교직', '자선']\n",
-    "list_major2 = ['10', '15', '20', '25', '30', '40', '60', '70']\n",
-    "Grade = ['A+', 'A0', 'B+','B0', 'C+', 'C0', 'D+', 'D-', 'F' ]\n",
-    "rate =  ['4.5', '4.0', '3.5', '3.0', '2.5', '2.0','1.5', '1.0' '0.0']\n",
+    "# time.sleep(3)\n",
+    "# driver.switch_to.default_content()\n",
+    "# list_major = ['1전공', '이중전공', '2전공', '부전공', '실용외국어', '교양', '교직', '자선']\n",
+    "# list_major2 = ['10', '15', '20', '25', '30', '40', '60', '70']\n",
+    "# Grade = ['A+', 'A0', 'B+','B0', 'C+', 'C0', 'D+', 'D-', 'F' ]\n",
+    "# rate =  ['4.5', '4.0', '3.5', '3.0', '2.5', '2.0','1.5', '1.0' '0.0']\n",
     "\n",
-    "search= input()\n",
-    "search = str(search)\n",
-    "find1 = ''\n",
-    "for i in range(len(list_major)):\n",
-    "    if search in list_major[i]: \n",
-    "        find1 = find1 = list_major2[i]\n",
-    "# /html/body/div/form/div[2]/table/tbody/tr[3]/td[6] \n",
-    "#  3 ~ 끝까지 전부 \n",
-    "# /html/body/div/form/div[2]/table/tbody/tr[3,:]/td[6]        \n",
-    "try:\n",
-    "    driver.switch_to.frame(driver.find_element_by_name('body'))\n",
-    "    driver.switch_to.frame(driver.find_element_by_name('list'))\n",
-    "    select = Select(driver.find_element_by_name('clss'))\n",
-    "    select.select_by_value(find1)\n",
-    "except NoSuchElementException as e: print(\"no such element is in this page\")\n",
-    "html = driver.page_source\n",
-    "bs = BeautifulSoup(html, 'html.parser')\n",
-    "tags = bs.findAll('td')\n",
-    "list_cal = []\n",
-    "list_cal2 = []\n",
-    "for tag in tags : \n",
-    "    if (len(tag.text) == 2):\n",
-    "        for i in range(len(Grade)):\n",
-    "            if(Grade[i] in tag.text):\n",
-    "                list_cal.append(float(rate[i]))\n",
-    "    if (len(tag.text) == 1 and tag.text != '재'): list_cal2.append(float(tag.text))\n",
-    "s = 0;\n",
-    "for i in range(len(list_cal2)): s =  s + (list_cal2[i] * list_cal[i])\n",
-    "print(s/ sum(list_cal2))"
+    "# search= input()\n",
+    "# search = str(search)\n",
+    "# find1 = ''\n",
+    "# for i in range(len(list_major)):\n",
+    "#     if search in list_major[i]: \n",
+    "#         find1 = find1 = list_major2[i]\n",
+    "# #/html/body/div/form/div[2]/table/tbody/tr[3]/td[6] \n",
+    "# # 3 ~ 끝까지 전부 \n",
+    "# #/html/body/div/form/div[2]/table/tbody/tr[3,:]/td[6]        \n",
+    "# try:\n",
+    "#     driver.switch_to.frame(driver.find_element_by_name('body'))\n",
+    "#     driver.switch_to.frame(driver.find_element_by_name('list'))\n",
+    "#     select = Select(driver.find_element_by_name('clss'))\n",
+    "#     select.select_by_value(find1)\n",
+    "# except NoSuchElementException as e: print(\"no such element is in this page\")\n",
+    "# html = driver.page_source\n",
+    "# bs = BeautifulSoup(html, 'html.parser')\n",
+    "# tags = bs.findAll('td')\n",
+    "# list_cal = []\n",
+    "# list_cal2 = []\n",
+    "# for tag in tags : \n",
+    "#     if (len(tag.text) == 2):\n",
+    "#         for i in range(len(Grade)):\n",
+    "#             if(Grade[i] in tag.text):\n",
+    "#                 list_cal.append(float(rate[i]))\n",
+    "#     if (len(tag.text) == 1 and tag.text != '재'): list_cal2.append(float(tag.text))\n",
+    "# s = 0;\n",
+    "# for i in range(len(list_cal2)): s =  s + (list_cal2[i] * list_cal[i])\n",
+    "# print(s/ sum(list_cal2))\n",
+    "\n",
+    "\n",
+    "print(user_college)\n",
+    "print(user_major)\n",
+    "print(user_sub)\n",
+    "print(user_sub_major)\n",
+    "print(user_ssn)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-3-f42e6d69e936>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-f42e6d69e936>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    else :\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "if user_ssn >= 19 and user_college == \"바이오메디컬공학부\":\n",
+    "    #csv와 비교 function\n",
+    "else :\n",
+    "    if 8 <= user_ssn <= 14 :\n",
+    "        if user_college == \"통번역대학\" :\n",
+    "            #csv와 비교 function \n",
+    "        else :\n",
+    "            #csv와 비교 function\n",
+    "    elif user_ssn >= 15 :\n",
+    "        if user_college == \"통번역대학\" :\n",
+    "            #csv와 비교 function\n",
+    "        elif user_college == \"공과대학\"\n",
+    "            #csv와 비교 function\n",
+    "        else :\n",
+    "            #csv와 비교 function\n",
+    "        \n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "test = pd.read_csv('/Users/sinchan-yeob/Desktop/project/excel/2015-_공과대학.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Unnamed: 0  전공  이중전공  부전공  교양  자선  졸업학점 합계\n",
+      "0       이중전공  54    42    0  32   6      134\n",
+      "1        부전공  54     0   21  32  27      134\n",
+      "2       전공심화  75     0    0  32  27      134\n",
+      "3   전공심화+부전공  75     0   21  32   6      134\n"
+     ]
+    }
+   ],
    "source": [
     "print(test)"
    ]
@@ -181,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
